fix: add comments to jk_chart.ipynb

--- a/notebooks/jk_chart.ipynb
+++ b/notebooks/jk_chart.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8c0f77ad",
    "metadata": {},
    "outputs": [
@@ -129,6 +129,7 @@
     }
    ],
    "source": [
+    "# Wskaźnik unikalności kierunku - na ilu uczelniach jest dany kierunek\n",
     "data = db.get_data(\"\"\"\n",
     "SELECT \n",
     "    kierunek.nazwa AS nazwa_kierunku,\n",
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "585af07b",
    "metadata": {},
    "outputs": [
@@ -301,6 +302,7 @@
     }
    ],
    "source": [
+    "# Wskaźnik produkcji absolwentów względem ilości kierunków\n",
     "data = db.get_data(\"\"\"\n",
     "SELECT \n",
     "    nazwa_uczelni,\n",
